# vde_dnsutils

./: Makefile.am  README.md  configure.ac  dnsmsgs.h  fqdndhcp.1  fqdndhcp.c  fqdndhcp4.1  fqdndhcp4.c  getbaseaddr.c  getbaseaddr.h  hashdns.1  hashdns.c  name_utils.c  name_utils.h  resolv.c  resolv.h  revdb.c  revdb.h  ustring.h  utils.c  utils.h
aux-files/ifupdown/if-down.d/: fqdndhcp
aux-files/ifupdown/if-up.d/: fqdndhcp
aux-files/udhcpc/: dhcpscript
